// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast — 트리 스냅샷 error 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    aria-live="assertive"
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#F6DDD3",
        "borderColor": "#CFC9AE",
        "borderRadius": 14,
        "borderWidth": 1,
        "columnGap": 8,
        "flexDirection": "row",
        "opacity": 1,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 8,
        "position": "relative",
        "rowGap": 8,
        "transform": [
          {
            "translateX": 0,
          },
          {
            "translateY": 0,
          },
          {
            "rotate": 0,
          },
          {
            "skewX": 0,
          },
          {
            "skewY": 0,
          },
          {
            "scaleX": 1,
          },
          {
            "scaleY": 1,
          },
        ],
        "transitionDuration": "200ms",
        "transitionProperty": "opacity",
        "transitionTimingFunction": "ease-out",
      }
    }
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    role="alert"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F6DDD3",
          "borderColor": "#CFC9AE",
          "borderRadius": 14,
          "borderWidth": 1,
          "columnGap": 8,
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 8,
          "position": "relative",
          "rowGap": 8,
          "transform": [
            {
              "translateX": 0,
            },
            {
              "translateY": 0,
            },
            {
              "rotate": 0,
            },
            {
              "skewX": 0,
            },
            {
              "skewY": 0,
            },
            {
              "scaleX": 1,
            },
            {
              "scaleY": 1,
            },
          ],
        },
      ]
    }
    testID="toast"
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#B3200B"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flexShrink": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4289929227,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGCircle
          cx="12"
          cy="12"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          r="10"
          stroke={
            {
              "payload": 4289929227,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGLine
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4289929227,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <RNSVGLine
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4289929227,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#B3200B",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontSize": 14,
          "fontWeight": "500",
          "lineHeight": 20,
        }
      }
    >
      저장했어요
    </Text>
    <View
      accessibilityLabel="다시 시도"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "alignItems": "center",
          "flexShrink": 0,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={14}
        bbWidth={14}
        fill="none"
        focusable={false}
        height={14}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#F58B0F"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 14,
              "width": 14,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294281999,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M21 3v5h-5"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M8 16H3v5"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      accessibilityLabel="닫기"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "alignItems": "center",
          "flexShrink": 0,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={14}
        bbWidth={14}
        fill="none"
        focusable={false}
        height={14}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#645C42"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 14,
              "width": 14,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284767298,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M18 6 6 18"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="m6 6 12 12"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "bottom": 0,
          "height": 2.5,
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
      testID="toast-timer"
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          {
            "animationDuration": "2000ms",
            "animationFillMode": "forwards",
            "animationName": {
              "from": {
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              "to": {
                "transform": [
                  {
                    "scaleX": 0,
                  },
                ],
              },
            },
            "animationTimingFunction": "linear",
            "backgroundColor": "#B3200B",
            "height": "100%",
            "transformOrigin": "left",
            "width": "100%",
          }
        }
        style={
          [
            {
              "backgroundColor": "#B3200B",
              "height": "100%",
              "transformOrigin": "left",
              "width": "100%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Toast — 트리 스냅샷 info 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    aria-live="polite"
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#FBF3D0",
        "borderColor": "#CFC9AE",
        "borderRadius": 14,
        "borderWidth": 1,
        "columnGap": 8,
        "flexDirection": "row",
        "opacity": 1,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 8,
        "position": "relative",
        "rowGap": 8,
        "transform": [
          {
            "translateX": 0,
          },
          {
            "translateY": 0,
          },
          {
            "rotate": 0,
          },
          {
            "skewX": 0,
          },
          {
            "skewY": 0,
          },
          {
            "scaleX": 1,
          },
          {
            "scaleY": 1,
          },
        ],
        "transitionDuration": "200ms",
        "transitionProperty": "opacity",
        "transitionTimingFunction": "ease-out",
      }
    }
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    role="status"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FBF3D0",
          "borderColor": "#CFC9AE",
          "borderRadius": 14,
          "borderWidth": 1,
          "columnGap": 8,
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 8,
          "position": "relative",
          "rowGap": 8,
          "transform": [
            {
              "translateX": 0,
            },
            {
              "translateY": 0,
            },
            {
              "rotate": 0,
            },
            {
              "skewX": 0,
            },
            {
              "skewY": 0,
            },
            {
              "scaleX": 1,
            },
            {
              "scaleY": 1,
            },
          ],
        },
      ]
    }
    testID="toast"
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#241208"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flexShrink": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4280553992,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGCircle
          cx="12"
          cy="12"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          r="10"
          stroke={
            {
              "payload": 4280553992,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 16v-4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4280553992,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 8h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4280553992,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#241208",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontSize": 14,
          "fontWeight": "500",
          "lineHeight": 20,
        }
      }
    >
      저장했어요
    </Text>
    <View
      accessibilityLabel="다시 시도"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "alignItems": "center",
          "flexShrink": 0,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={14}
        bbWidth={14}
        fill="none"
        focusable={false}
        height={14}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#F58B0F"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 14,
              "width": 14,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294281999,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M21 3v5h-5"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M8 16H3v5"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      accessibilityLabel="닫기"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "alignItems": "center",
          "flexShrink": 0,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={14}
        bbWidth={14}
        fill="none"
        focusable={false}
        height={14}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#645C42"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 14,
              "width": 14,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284767298,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M18 6 6 18"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="m6 6 12 12"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "bottom": 0,
          "height": 2.5,
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
      testID="toast-timer"
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          {
            "animationDuration": "2000ms",
            "animationFillMode": "forwards",
            "animationName": {
              "from": {
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              "to": {
                "transform": [
                  {
                    "scaleX": 0,
                  },
                ],
              },
            },
            "animationTimingFunction": "linear",
            "backgroundColor": "#241208",
            "height": "100%",
            "transformOrigin": "left",
            "width": "100%",
          }
        }
        style={
          [
            {
              "backgroundColor": "#241208",
              "height": "100%",
              "transformOrigin": "left",
              "width": "100%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Toast — 트리 스냅샷 success 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    aria-live="polite"
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#FCF6DD",
        "borderColor": "#CFC9AE",
        "borderRadius": 14,
        "borderWidth": 1,
        "columnGap": 8,
        "flexDirection": "row",
        "opacity": 1,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 8,
        "position": "relative",
        "rowGap": 8,
        "transform": [
          {
            "translateX": 0,
          },
          {
            "translateY": 0,
          },
          {
            "rotate": 0,
          },
          {
            "skewX": 0,
          },
          {
            "skewY": 0,
          },
          {
            "scaleX": 1,
          },
          {
            "scaleY": 1,
          },
        ],
        "transitionDuration": "200ms",
        "transitionProperty": "opacity",
        "transitionTimingFunction": "ease-out",
      }
    }
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    role="status"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FCF6DD",
          "borderColor": "#CFC9AE",
          "borderRadius": 14,
          "borderWidth": 1,
          "columnGap": 8,
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 8,
          "position": "relative",
          "rowGap": 8,
          "transform": [
            {
              "translateX": 0,
            },
            {
              "translateY": 0,
            },
            {
              "rotate": 0,
            },
            {
              "skewX": 0,
            },
            {
              "skewY": 0,
            },
            {
              "scaleX": 1,
            },
            {
              "scaleY": 1,
            },
          ],
        },
      ]
    }
    testID="toast"
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#CEAD00"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flexShrink": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4291734784,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M21.801 10A10 10 0 1 1 17 3.335"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4291734784,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="m9 11 3 3L22 4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4291734784,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#241208",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontSize": 14,
          "fontWeight": "500",
          "lineHeight": 20,
        }
      }
    >
      저장했어요
    </Text>
    <View
      accessibilityLabel="다시 시도"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "alignItems": "center",
          "flexShrink": 0,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={14}
        bbWidth={14}
        fill="none"
        focusable={false}
        height={14}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#F58B0F"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 14,
              "width": 14,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294281999,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M21 3v5h-5"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="M8 16H3v5"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294281999,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      accessibilityLabel="닫기"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "alignItems": "center",
          "flexShrink": 0,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={14}
        bbWidth={14}
        fill="none"
        focusable={false}
        height={14}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#645C42"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 14,
              "width": 14,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284767298,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M18 6 6 18"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
          <RNSVGPath
            d="m6 6 12 12"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "bottom": 0,
          "height": 2.5,
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
      testID="toast-timer"
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          {
            "animationDuration": "2000ms",
            "animationFillMode": "forwards",
            "animationName": {
              "from": {
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              "to": {
                "transform": [
                  {
                    "scaleX": 0,
                  },
                ],
              },
            },
            "animationTimingFunction": "linear",
            "backgroundColor": "#CEAD00",
            "height": "100%",
            "transformOrigin": "left",
            "width": "100%",
          }
        }
        style={
          [
            {
              "backgroundColor": "#CEAD00",
              "height": "100%",
              "transformOrigin": "left",
              "width": "100%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
